1.活动注释添加