@@ -9,24 +9,37 @@ import org.springframework.data.redis.core.HashOperations;
 import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.stereotype.Repository;
 
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 /**
- * 活动配置DAO
- * 用于操作 Redis 中的活动配置表：activity:server
+ * 活动配置 DAO
+ *
+ * <p>功能：
+ * - 查询：单个 / 批量 / 全部
+ * - 保存：单个 / 批量
+ * - 删除：单个 / 全部
+ * - 使用 RedisLock 保证并发安全
+ *
+ * 存储结构：
+ * Redis Hash
+ *   key   = "activity:server"
+ *   field = 活动ID (Long)
+ *   value = ActivityData
  *
  * @author lm
  * @date 2025/9/4
  */
 @Repository
 public class ActivityDao {
-    private final Logger log = LoggerFactory.getLogger(ActivityDao.class);
-    private final String TABLE_NAME = "activity:server";
-    private final String ACTIVITY_ALL_LOCK = "activity:alllock";
-    private final String ACTIVITY_LOCK = "activity:lock:%d";
+    private static final Logger log = LoggerFactory.getLogger(ActivityDao.class);
+
+    /** Redis Hash 存储活动配置的表名 */
+    private static final String TABLE_NAME = "activity:server";
+    /** 全局锁 key（用于批量保存） */
+    private static final String ACTIVITY_ALL_LOCK = "activity:alllock";
+    /** 单个活动配置锁 key 模板 */
+    private static final String ACTIVITY_LOCK = "activity:lock:%d";
+
     private final RedisTemplate<String, ActivityData> redisTemplate;
     private final RedisLock redisLock;
 
@@ -39,67 +52,79 @@ public class ActivityDao {
         return redisTemplate.opsForHash();
     }
 
+    /** 生成单个活动的锁 Key */
     public String getLockKey(long activityId) {
-        return ACTIVITY_LOCK.formatted(activityId);
+        return String.format(ACTIVITY_LOCK, activityId);
     }
 
+    /** 获取全局锁 Key（批量保存时使用） */
     public String getAllLockKey() {
         return ACTIVITY_ALL_LOCK;
     }
 
-
     /**
-     * 获取全部活动数据
+     * 获取全部活动配置
+     *
+     * @return 活动配置列表，失败时返回空列表
      */
     public List<ActivityData> getAllActivityInfos() {
         try {
             return opsForHash().values(TABLE_NAME);
         } catch (Exception e) {
-            log.error("获取全部活动配置异常", e);
-            return new ArrayList<>();
+            log.error("获取全部活动配置失败", e);
+            return Collections.emptyList();
         }
     }
 
     /**
      * 根据活动ID获取单个活动配置
+     *
+     * @param activityId 活动ID
+     * @return 活动配置，失败时返回 null
      */
     public ActivityData getActivityById(long activityId) {
         try {
             return opsForHash().get(TABLE_NAME, activityId);
         } catch (Exception e) {
-            log.error("获取活动配置异常 activityId={}", activityId, e);
+            log.error("获取活动配置失败 activityId={}", activityId, e);
             return null;
         }
     }
 
     /**
      * 批量获取活动配置
+     *
+     * @param activityIds 活动ID列表
+     * @return 活动ID -> 活动配置 Map，失败或为空返回空Map
      */
     public Map<Long, ActivityData> getActivitiesByIds(List<Long> activityIds) {
+        if (activityIds == null || activityIds.isEmpty()) {
+            return Collections.emptyMap();
+        }
         try {
-            if (activityIds == null || activityIds.isEmpty()) {
-                return Map.of();
-            }
             List<ActivityData> list = opsForHash().multiGet(TABLE_NAME, new ArrayList<>(activityIds));
-            Map<Long, ActivityData> result = new HashMap<>();
+            Map<Long, ActivityData> result = new HashMap<>(activityIds.size());
             for (int i = 0; i < activityIds.size(); i++) {
-                if (list.get(i) != null) {
-                    result.put(activityIds.get(i), list.get(i));
+                ActivityData data = (list != null && i < list.size()) ? list.get(i) : null;
+                if (data != null) {
+                    result.put(activityIds.get(i), data);
                 }
             }
             return result;
         } catch (Exception e) {
-            log.error("批量获取活动配置异常 ids={}", activityIds, e);
-            return Map.of();
+            log.error("批量获取活动配置失败 ids={}", activityIds, e);
+            return Collections.emptyMap();
         }
     }
 
     /**
      * 保存或更新单个活动配置
+     *
+     * @param data 活动配置（不能为空，ID 必须大于0）
      */
     public void saveActivity(ActivityData data) {
         if (data == null || data.getId() == 0) {
-            log.warn("保存活动配置失败: config 或 ID 为空");
+            log.warn("保存活动配置失败: 数据或ID为空");
             return;
         }
         String lockKey = getLockKey(data.getId());
@@ -107,7 +132,7 @@ public class ActivityDao {
         try {
             opsForHash().put(TABLE_NAME, data.getId(), data);
         } catch (Exception e) {
-            log.error("保存活动配置异常 id={}", data.getId(), e);
+            log.error("保存活动配置失败 id={}", data.getId(), e);
         } finally {
             redisLock.unlock(lockKey);
         }
@@ -115,6 +140,8 @@ public class ActivityDao {
 
     /**
      * 批量保存活动配置
+     *
+     * @param activityDataMap 活动配置 Map，key=活动ID，value=配置
      */
     public void saveActivities(Map<Long, ActivityData> activityDataMap) {
         if (activityDataMap == null || activityDataMap.isEmpty()) {
@@ -125,7 +152,7 @@ public class ActivityDao {
         try {
             opsForHash().putAll(TABLE_NAME, activityDataMap);
         } catch (Exception e) {
-            log.error("批量保存活动配置异常, size={}", activityDataMap.size(), e);
+            log.error("批量保存活动配置失败, size={}", activityDataMap.size(), e);
         } finally {
             redisLock.unlock(allLockKey);
         }
@@ -133,12 +160,14 @@ public class ActivityDao {
 
     /**
      * 删除单个活动配置
+     *
+     * @param activityId 活动ID
      */
     public void deleteActivity(long activityId) {
         try {
             opsForHash().delete(TABLE_NAME, activityId);
         } catch (Exception e) {
-            log.error("删除活动配置异常 id={}", activityId, e);
+            log.error("删除活动配置失败 id={}", activityId, e);
         }
     }
 
@@ -149,7 +178,7 @@ public class ActivityDao {
         try {
             redisTemplate.delete(TABLE_NAME);
         } catch (Exception e) {
-            log.error("清空活动配置异常", e);
+            log.error("清空活动配置失败", e);
         }
     }
 }
